<resources>
    <string name="app_name">eLearning</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="or">or</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="change_password">Change Password</string>
    <string name="welcome_home">Welcome, home</string>
    <string name="default_text">-</string>
    <string name="tag_line">Panduan Belajar Dasar-dasar Javascript</string>
    <string name="your_materials">Your Materials</string>
    <string name="logout">Logout</string>
    <string name="change_language">Change Language</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="loading">Loading..</string>
    <string name="filled_required">Filled Required</string>
    <string name="email_is_not_valid">Email is Not Valid</string>
    <string name="password_required_more_than_8">Password required more than 8</string>
    <string name="pass_not_match">Password not match</string>
</resources>