<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/swipe_main"
    tools:context=".presentation.main.MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_avatar_main"
                android:layout_width="@dimen/image_user_profile_normal"
                android:layout_height="@dimen/image_user_profile_normal"
                android:src="@android:color/darker_gray"
                android:layout_margin="@dimen/normal_100"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tv_welcome_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_home"
                android:layout_marginStart="@dimen/normal_100"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintStart_toEndOf="@id/iv_avatar_main"
                app:layout_constraintTop_toTopOf="@id/iv_avatar_main"
                app:layout_constraintBottom_toTopOf="@id/tv_name_user_main"/>

            <TextView
                android:id="@+id/tv_name_user_main"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/default_text"
                android:textSize="@dimen/subtitle_1"
                android:textColor="@color/black"
                android:fontFamily="sans-serif"
                android:layout_marginEnd="@dimen/normal_100"
                app:layout_constraintStart_toStartOf="@id/tv_welcome_home"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/iv_avatar_main"
                app:layout_constraintTop_toBottomOf="@id/tv_welcome_home"
                tools:text="Novrinda Agil"/>

            <TextView
                android:id="@+id/tv_tag_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tag_line"
                android:textSize="@dimen/h5"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-medium"
                android:layout_marginStart="@dimen/normal_100"
                android:layout_marginEnd="@dimen/normal_100"
                android:layout_marginTop="@dimen/normal_150"
                app:layout_constraintTop_toBottomOf="@id/iv_avatar_main"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>