<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".presentation.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/normal_100">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/image_login"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            style="bold"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_marginTop="@dimen/normal_100"/>

<!--        Text field email-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            app:hintEnabled="false"
            android:layout_marginTop="@dimen/small_100">

            <EditText
                android:id="@+id/et_email_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_edit_text"
                android:paddingStart="@dimen/normal_100"
                android:paddingEnd="@dimen/normal_100"
                android:textColor="@color/black"
                android:textColorHint="#4D000000"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:padding="@dimen/normal_100"/>
        </com.google.android.material.textfield.TextInputLayout>

<!--        Text field password-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            app:hintEnabled="false"
            app:endIconMode="password_toggle"
            android:layout_marginTop="@dimen/normal_100">

            <EditText
                android:id="@+id/et_pass_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_edit_text"
                android:paddingStart="@dimen/normal_100"
                android:paddingEnd="@dimen/normal_100"
                android:textColor="@color/black"
                android:textColorHint="#4D000000"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:padding="@dimen/normal_100"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_forgot_pass_login"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:text="@string/forgot_password"
            android:textAllCaps="false"
            android:background="@android:color/transparent"
            android:layout_marginTop="@dimen/normal_100"
            android:layout_gravity="end"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_auth_color_primary"
            android:text="Login"
            android:textColor="@color/white"
            android:layout_marginStart="@dimen/small_50"
            android:layout_marginEnd="@dimen/small_50"
            android:layout_marginTop="@dimen/normal_100"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/normal_100"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_auth_color_white"
            android:text="Register"
            android:textColor="@color/colorPrimary"
            android:layout_marginStart="@dimen/small_50"
            android:layout_marginEnd="@dimen/small_50"
            android:layout_marginTop="@dimen/normal_100"/>

    </LinearLayout>

</ScrollView>